# NewsAggregator

./: .gitignore  README.md  envVars.env  main.py  projectJournal.md  pyproject.toml
app/scrapers/: anthropic.py  google.py  helpers.py  openai.py  youtube.py
app/tests/scrapers/: test_helpers.py
