[project]
name = "newsaggregator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
	"beautifulsoup4>=4.14.3",
	"curl-cffi>=0.13.0",
	"feedparser>=6.0.12",
	"google-api-python-client>=2.188.0",
	"google-auth-httplib2>=0.3.0",
	"google-auth-oauthlib>=1.2.4",
	"httpx>=0.28.1",
	"lxml-html-clean>=0.4.3",
	"newspaper3k>=0.2.8",
	"openai>=2.15.0",
	"psycopg2-binary>=2.9.11",
	"pytest>=8.4.2",
	"pytest-mock>=3.15.1",
	"python-dotenv>=1.2.1",
	"requests>=2.32.5",
	"sqlalchemy>=2.0.45",
	"trafilatura>=2.0.0",
	"youtube-transcript-api>=1.2.3",
]

[dependency-groups]
dev = [
	"ipykernel>=6.31.0",
]
